OKS NA EXAMINATION YEEEEEEY

--- a/chmc_wbms/templates/employee/add_examination.html
+++ b/chmc_wbms/templates/employee/add_examination.html
@@ -70,6 +70,9 @@
                 <label for="id_amount">{{ form.amount.label }}</label>
                 {{ form.amount }}
             </div>
+            <label for="id_status">{{ form.status.label }}</label>
+                {{ form.status }}
+            </div>
         </fieldset>
     
         <button type="submit">Save</button>
