--- a/chmc_wbms/templates/employee/add_examination.html
+++ b/chmc_wbms/templates/employee/add_examination.html
@@ -77,8 +77,11 @@
                         {{ form.method|add_class:"form-check" }}
                     </div>
                     <div class="col-md-4 mb-3">
-                        <label for="{{ form.amount.label }}" class="form-label">Amount:</label>
-                        {{ form.amount|add_class:"form-control" }}
+                        <label for="{{ form.amount.id_for_label }}" class="form-label">Amount:</label>
+                        <div class="input-group">
+                            <span class="input-group-text">₱</span>
+                            {{ form.amount|add_class:"form-control" }}
+                        </div>
                     </div>
                     <div class="col-md-4 mb-3">
                         <label for="{{ form.status.label }}" class="form-label">Payment Status:</label>
