--- a/chmc_wbms/templates/employee/add_examination.html
+++ b/chmc_wbms/templates/employee/add_examination.html
@@ -91,7 +91,7 @@
                 <div class="row">
                     <div class="col-md-6 mb-3">
                         <label for="{{ form.service_types.label }}" class="form-label">Service Type:</label>
-                        {{ form.service_types|add_class:"form-check" }}
+                        {{ form.service_types|add_class:"form-check align-left" }}
                     </div>
                     <div class="col-md-6 mb-3">
                         <label for="{{ form.attending_doctor.label }}" class="form-label">Attending Doctor:</label>
@@ -111,7 +111,7 @@
                         <label for="{{ form.amount.id_for_label }}" class="form-label">Amount:</label>
                         <div class="input-group">
                             <span class="input-group-text">₱</span>
-                            {{ form.amount|add_class:"form-control" }}
+                            {{ form.amount|add_class:"form-control bg-white border" }}
                         </div>
                     </div>
                     <div class="col-md-4 mb-3">
