--- a/chmc_wbms/templates/employee/employee_base.html
+++ b/chmc_wbms/templates/employee/employee_base.html
@@ -38,7 +38,7 @@
             <div class="section-padding">
                 <div class="container">
                     {% include 'employee/includes/employee_tabbar.html' %}
-                        <div class="tab-content mt-3" id="dashboardTabsContent">
+                        <div class="tab-content" id="dashboardTabsContent">
                                 <main>
                                     {% block content %}
                       
