--- a/chmc_wbms/templates/employee/document_results.html
+++ b/chmc_wbms/templates/employee/document_results.html
@@ -1,4 +1,5 @@
 {% extends 'employee/employee_base.html' %}
+{% load static %}
 
 {% block title %}Document Results{% endblock %}
 
@@ -15,37 +16,37 @@
             <div class="row g-3">
               <div class="col-4 text-center">
                 <div class="border border-primary rounded p-3">
-                  <img src="https://via.placeholder.com/60x60" class="mb-2" alt="Folder Icon">
+                  <img src="{% static 'image/folder-icon.png' %}" class="mb-2" alt="Folder Icon">
                   <p class="mb-0 fw-bold">2024</p>
                 </div>
               </div>
               <div class="col-4 text-center">
                 <div class="border border-primary rounded p-3">
-                  <img src="https://via.placeholder.com/60x60" class="mb-2" alt="Folder Icon">
+                  <img src="{% static 'image/folder-icon.png' %}" class="mb-2" alt="Folder Icon">
                   <p class="mb-0 fw-bold">2023</p>
                 </div>
               </div>
               <div class="col-4 text-center">
                 <div class="border border-primary rounded p-3">
-                  <img src="https://via.placeholder.com/60x60" class="mb-2" alt="Folder Icon">
+                  <img src="{% static 'image/folder-icon.png' %}" class="mb-2" alt="Folder Icon">
                   <p class="mb-0 fw-bold">2022</p>
                 </div>
               </div>
               <div class="col-4 text-center">
                 <div class="border border-primary rounded p-3">
-                  <img src="https://via.placeholder.com/60x60" class="mb-2" alt="Folder Icon">
+                  <img src="{% static 'image/folder-icon.png' %}" class="mb-2" alt="Folder Icon">
                   <p class="mb-0 fw-bold">2021</p>
                 </div>
               </div>
               <div class="col-4 text-center">
                 <div class="border border-primary rounded p-3">
-                  <img src="https://via.placeholder.com/60x60" class="mb-2" alt="Folder Icon">
+                  <img src="{% static 'image/folder-icon.png' %}" class="mb-2" alt="Folder Icon">
                   <p class="mb-0 fw-bold">2020</p>
                 </div>
               </div>
               <div class="col-4 text-center">
                 <div class="border border-primary rounded p-3">
-                  <img src="https://via.placeholder.com/60x60" class="mb-2" alt="Folder Icon">
+                  <img src="{% static 'image/folder-icon.png' %}" class="mb-2" alt="Folder Icon">
                   <p class="mb-0 fw-bold">2019</p>
                 </div>
               </div>
