--- a/chmc_wbms/templates/employee/employee_dashboard.html
+++ b/chmc_wbms/templates/employee/employee_dashboard.html
@@ -4,6 +4,18 @@
 
 {% block content %}
 
+<style>
+    .modal-dialog {
+      width: 800px; /* Set your desired width */
+      max-width: 90%; /* Ensure responsiveness */
+    }
+    .modal-content.one {
+      height: 560px; /* Set your desired height */
+      max-height: none; /* Ensure responsiveness */
+      overflow: visible;
+    }
+  </style>
+
 <div class="container my-4">
     <div class="row text-center">
         <div class="col-md-4 mb-3">
@@ -59,7 +71,7 @@
 <!-- Modal for Adding Appointment -->
 <div class="modal fade" id="appointmentModal" tabindex="-1" role="dialog" aria-labelledby="appointmentModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
-        <div class="modal-content">
+        <div class="modal-content one">
             <div class="modal-header">
                 <h5 class="modal-title" id="appointmentModalLabel">Schedule Appointment</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -92,7 +104,7 @@
                         <label for="appointment-time">Appointment Time</label>
                         <input type="time" id="appointment-time" class="form-control" name="appointment_time" required>
                     </div>
-                    <div class="modal-footer">
+                    <div class="modal-footer md-4">
                         <button type="submit" name="add_appointment" class="btn btn-primary">Add Appointment</button>
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                     </div>
