--- a/chmc_wbms/templates/employee/includes/employee_navbar.html
+++ b/chmc_wbms/templates/employee/includes/employee_navbar.html
@@ -9,8 +9,8 @@
                 <span class="curehealth-span-1"> HEATLH <br />MEDICAL CLINIC<br />ONLINE SYSTEM</span>
             </p>
         </div>
-        <div class="rowprofileicono">
-            <a href="#" data-bs-toggle="modal" data-bs-target="#accountModal{{ account.id }}">
+        <div class="rowprofileicono d-flex align-items-center">
+            <a href="#" data-bs-toggle="modal" data-bs-target="#accountModal{{ account.id }}" class="d-flex align-items-center">
             {% if user.image %}
             <img src="{{ user.image.url }}" alt="Profile Icon" class="profileiconone">
             {% else %}
@@ -18,7 +18,7 @@
             {% endif %}
 
             <!-- User Full Name with Prefix -->
-            <h4 class="admin ui heading size-headinglg-name">
+            <h4 class="admin ui heading size-headinglg-name ms-3">
                 {% if user.prefix %}
                     {{ user.prefix }} {{ user.first_name }} {{ user.last_name }}
                 {% else %}
