--- a/chmc_wbms/templates/admin/admin_base.html
+++ b/chmc_wbms/templates/admin/admin_base.html
@@ -37,7 +37,7 @@
             <div class="section-padding">
                 <div class="container">
                     {% include 'admin/includes/admin_tabbar.html' %}
-                        <div class="tab-content mt-3" id="dashboardTabsContent">
+                        <div class="tab-content" id="dashboardTabsContent">
                                 <main>
 
                                     {% block content %}
